added media queries

--- a/cv.html
+++ b/cv.html
@@ -6,7 +6,7 @@
 		<div id="cv" class="container">
 			<section class="row item">
 				<div id="header"><h1 class="center">Owen <strong>SCOTT</strong></h1>
-<div class="row center">email: owen.m.scott@gmail.com tel: +1 917-940-4923</div></div>
+<div class="row center"><span class="contact">email: owen.m.scott@gmail.com</span> <span class="contact">tel: +1 917-940-4923</span></div></div>
 			</section>
 			<section class="row item line">
 				<h2>Education and Qualifications</h2>
